Bug 472666 - Apps and system services disappeared from Shortcuts KCM
Summary: Apps and system services disappeared from Shortcuts KCM
Status: RESOLVED FIXED
Alias: None
Product: neon
Classification: KDE Neon
Component: Packages Unstable Edition (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Neon Bugs
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-07-26 13:44 UTC by Patrick Silva
Modified: 2023-09-04 14:41 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (110.35 KB, image/png)
2023-07-26 13:44 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-07-26 13:44:35 UTC
Created attachment 160540 [details]
screenshot

STEPS TO REPRODUCE
1. open Shortcuts KCM
2. 
3. 

OBSERVED RESULT
apps and system services are missing, only common actions are available. Please see the attached screenshot. 

EXPECTED RESULT
apps and system services are available

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.6.0
Graphics Platform: Wayland
Comment 1 Nate Graham 2023-07-26 20:38:55 UTC
Cannot reproduce. Possibly a kded5 vs kded6 issue. Are you able to reproduce this, Justin?
Comment 2 Justin Zobel 2023-07-27 01:15:09 UTC
I can't replicate this one either, I get Apps, Commands, System Settings and Common Actions.
Comment 3 Nate Graham 2023-07-28 20:41:48 UTC
Sounds like a Neon packaging issue; moving there.
Comment 4 Jonathan Riddell 2023-08-02 10:41:51 UTC
I can recreate this but I don't know where the issue is
Comment 5 David Edmundson 2023-09-04 14:41:20 UTC
Git commit f7c35933316fb956d740864290a696c7d33e631b by David Edmundson.
Committed on 04/09/2023 at 16:41.
Pushed by davidedmundson into branch 'master'.

kcms/keys: Fix applications model load

The current model calls beginResetModel then starts an asynchronous task
which will finally call endResetModel. All the time m_components and
thus the rowCount is changing.

It is undefined to process events between begin and end calls.

This patch introduced a temporary variable whilst loading components so
we can make a simpler synchronous reset.

M  +10   -3    kcms/keys/globalaccelmodel.cpp
M  +1    -0    kcms/keys/globalaccelmodel.h

https://invent.kde.org/plasma/plasma-desktop/-/commit/f7c35933316fb956d740864290a696c7d33e631b